--- a/3D.ipynb
+++ b/3D.ipynb
@@ -242,7 +242,7 @@
       "metadata": {},
       "source": [
         "### Results\n",
-        "With $12$ hidden layers and depth of $4$ the ipinn model get an RMSE of $5.3 × 10^{-3}$ after $10000$ iterations "
+        "With $12$ hidden layers and depth of $4$ the ipinn model gets an RMSE of $5.3 × 10^{-3}$ after $10000$ iterations "
       ]
     }
   ],
